Updated API examples